--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <!-- Navigation bar -->
     <nav class="h-24 flex items-center justify-between px-10">
       <div class="h-full flex items-center">
-        <img src="./KSS.png" alt="" class="w-full h-4/5 object-fill" />
+        <img src="./assets//KSS.png" alt="" class="w-full h-4/5 object-fill" />
       </div>
       <ul class="flex space-x-10 text-[1.12rem] mr-4">
         <li><a href="#home">Home</a></li>
@@ -53,7 +53,7 @@
       </div>
       <div class="m-auto w-1/2 h-5/6">
         <img
-          src="./undraw_reading_book_re_kqpk.svg"
+          src="./assets/undraw_reading_book_re_kqpk.svg"
           alt=""
           class="h-full w-full object-fill"
         />
@@ -152,11 +152,11 @@
         Take a guided video tour
       </h3>
       <div class="h-40 w-40 mx-auto my-10 animate-pulse">
-        <img src="./play-button.png" alt="" />
+        <img src="./assets/play-button.png" alt="" />
       </div>
       <div class="w-1/3 absolute bottom-0">
         <img
-          src="./undraw_online_everywhere_re_n3lr.svg"
+          src="./assets/undraw_online_everywhere_re_n3lr.svg"
           alt=""
           class="w-full h-full object-cover"
         />
@@ -192,7 +192,7 @@
         </div>
         <div class="w-2/5 h-100">
           <img
-            src="./undraw_teaching_re_g7e3.svg"
+            src="./assets/undraw_teaching_re_g7e3.svg"
             alt=""
             class="h-full w-full object-fill"
           />
@@ -202,7 +202,7 @@
       <div class="flex py-5 justify-center">
         <div class="py-20 pr-20 w-2/5 h-100">
           <img
-            src="./undraw_junior_soccer_6sop.svg"
+            src="./assets/undraw_junior_soccer_6sop.svg"
             alt=""
             class="h-full w-full object-fill"
           />
@@ -236,7 +236,7 @@
         </div>
         <div class="py-20 w-2/5 h-100">
           <img
-            src="./undraw_mathematics_-4-otb.svg"
+            src="./assets/undraw_mathematics_-4-otb.svg"
             alt=""
             class="h-full w-full object-fill"
           />
@@ -298,7 +298,7 @@
       </div>
       <div class="w-1/4 h-2/3">
         <img
-          src="./logo_KSS.png"
+          src="./assets/logo_KSS.png"
           alt=""
           class="w-full h-full object-cover overflow-visible"
         />
