--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
         </div>
         <div class="py-20 w-2/5 h-100">
           <img
-            src="./assets/undraw_mathematics_-4-otb.svg"
+            src="./assets/u~ndraw_mathematics_-4-otb.svg"
             alt=""
             class="h-full w-full object-fill"
           />
