Fixed css file path

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KSS</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -236,7 +236,7 @@
         </div>
         <div class="py-20 w-2/5 h-100">
           <img
-            src="./assets/u~ndraw_mathematics_-4-otb.svg"
+            src="./assets/undraw_mathematics_-4-otb.svg"
             alt=""
             class="h-full w-full object-fill"
           />
