--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="h-dvh bg-white overflow-x-hidden">
+  <body class="h-dvh bg-white">
     <!-- Navigation bar -->
     <nav class="h-24 flex items-center justify-between md:px-10 px-5">
       <div class="h-full flex items-center">
